--- a/jmx/build.xml
+++ b/jmx/build.xml
@@ -7,9 +7,9 @@
     <!-- 需要改成自己本地的 Jmeter 目录-->
     <property name="jmeter.home" value="/usr/local/apache-jmeter-5.1.1" />
     <!-- jmeter生成jtl格式的结果报告的路径 相对路径 相对于build.xml所在目录-->
-    <property name="jmeter.result.jtl.dir" value="../../../.jenkins/workspace/jmeter_ant/report/jtl" />
+    <property name="jmeter.result.jtl.dir" value="../report/jtl" />
     <!-- jmeter生成html格式的结果报告的路径 相对路径 相对于build.xml所在目录 -->
-    <property name="jmeter.result.html.dir" value="../../../.jenkins/workspace/jmeter_ant/report/html" />
+    <property name="jmeter.result.html.dir" value="../report/html" />
     <!-- 生成的报告的前缀-->
     <property name="ReportName" value="TestReport" />
     <property name="jmeter.result.jtlName" value="${jmeter.result.jtl.dir}/${ReportName}${time}.jtl" />
